; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/curve448/extr_f_generic.c_gf_add.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/curve448/extr_f_generic.c_gf_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gf_add(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @gf_add_RAW(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @gf_weak_reduce(i32 %11)
  ret void
}

declare dso_local i32 @gf_add_RAW(i32, i32, i32) #1

declare dso_local i32 @gf_weak_reduce(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
